--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.chart-wrapper {
+  height: 400px;
+  /* background-color: #0d161b; */
+  background: white;
+}
+
+.outer-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background: #f3f3f7;
+  height: 100%;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  justify-content: center;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 60px;
+  background: white;
+  padding: 10px;
+}
+
+.heading {
+  align-self: center;
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.bitcoin-logo {
+  margin-right: 8px;
+}
+
+.chart-bid-wrapper {
+  align-self: center;
+  width: 80%;
+}
+
+.best-bid-boxes {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.outer-bid-box {
+  padding: 15px;
+  background: white;
+  border-radius: 4px;
+  border: 1px solid rgb(35, 26, 136);
+}
+
+.heading-bid-box {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 6px;
+}
+
+.margin-bid-box {
+  margin-right: 15px;
+}
+
+.bitcoin-content-wrapper {
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 6px;
+  background: white;
+  margin-bottom: 50px;
+}
+
+.bitcoin-heading {
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.bitcoin-content {
+  letter-spacing: 1px;
+  line-height: 20px;
+  text-align: justify;
 }
